# slides_translator

./: AGENTS.md  README.md  demo_german_slides.pptx  gui_app.py  pyproject.toml
examples/: demo_workflow.py  pdf_to_pptx_demo.py
packaging/: pyinstaller_gui.spec
scripts/: build_mac.sh  build_windows.bat
src/pptx_translator/: __init__.py  cli.py  extractor.py  gui_app.py  models.py  pipeline.py  replacer.py  translator.py
src/pptx_translator/extractors/: pdf_extractor.py
src/pptx_translator/gui/: __init__.py  main_window.py  workers.py
src/pptx_translator/pipelines/: pdf_to_pptx_pipeline.py
src/pptx_translator/writers/: __init__.py  pdf_to_pptx_writer.py
tests/: test_argos_model_availability.py  test_extract_replace.py  test_gui_smoke.py  test_integration_e2e.py  test_pdf_extractor.py  test_pdf_to_pptx_pipeline.py  test_translator_backends.py
