[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-translator"
version = "0.1.0"
description = "Translate likely German text in PPTX files to English while preserving layout and formatting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-pptx>=0.6.23",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pptx-translator = "pptx_translator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
