[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pptx-translator"
version = "0.1.0"
description = "Translate text in PPTX and digital PDF files with offline/online backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-pptx>=0.6.23",
  "requests>=2.31.0",
  "argostranslate>=1.9.0",
  "PyMuPDF>=1.24.0",
  "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyinstaller>=6.0.0",
]

[project.scripts]
pptx-translator = "pptx_translator.cli:main"
pptx-translator-gui = "pptx_translator.gui_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
